# transishow

./: LICENSE  README.md  dotenv  main.py  package.json  pnpm-lock.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: b608c6c8b1f4_added_username_field_to_users.py
core/: auth.py  dependency.py  mail.py  settings.py
models/: users.py
schemas/: auth.py  users.py
src/: App.vue
src/components/: TheWelcome.vue
src/components/icons/: IconTooling.vue
src/plugins/: i18n.ts
src/service/: httpclient.ts
v1/auth/: routes.py  views.py
